recursion.lessons.recursion.tree.Tree.scala.error
Tree:9: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
		gauche()
                      ^